--- a/pages/enciclopedia.html
+++ b/pages/enciclopedia.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>EXPLORADOR</title>
 </head>
@@ -31,72 +34,159 @@
             <section class="tortuga">
                 <div>
                     <img src="../img/tortuga.jpg" alt="tortuga">
+                    <p <i class="bi bi-globe-europe-africa"></i>>Las tortugas marinas han navegado los océanos de la
+                        Tierra durante los últimos 110 millones de
+                        años. Al igual que los arrecifes de coral y los lechos de pasto marino, las tortugas marinas son
+                        un importante vínculo de los ecosistemas marinos. Algunas de ellas comen grandes cantidades de
+                        medusas y representan una fuente de ingresos para las comunidades locales por medio de
+                        actividades de ecoturismo. marinas están disminuyendo.</p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/tiburon-nadando.jpg" alt="tiburon-nadando">
+                    <p <i class="bi bi-globe-americas"></i>
+                        >Tiburón blanco, tiburón ballena, tiburón martillo, pintarroja... Los tiburones o escualos están
+                        presentes en todos los océanos temperados y tropicales del planeta. Con más de 500 especies
+                        registradas, este super orden comprende a la mayor parte de los grandes depredadores y
+                        reguladores de ecosistemas marinos del planeta</p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/tiburon-martillo.jpg" alt="tiburon-martillo">
+                    <p <i class="bi bi-globe-americas"></i>
+                        >El Sphyrna Mokarran es el representante mas grande del grupo de los peces mas grande del mundo.
+                        A
+                        Pesar de estar presente en todas las zonas tropicales y templadas del mundo , es una de las
+                        especies de tiburones mas Amenazadas del mundo.</p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/pez-raro.jpg" alt="pez-raro">
+                    <p <i class="bi bi-globe-europe-africa"></i>>El pez luchador de Siam, Betta Splendens , es un pez
+                        tropical originario del sudeste Asiatico .
+                        En la naturaleza , puede encontrarse en zonas pocos profundas, Es unas de las especies mas
+                        populares del mercado su poblacion estan en amenazas por deterioro de su habitad. </p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/pez-payaso.jpg" alt="pez-payaso">
+                    <p <i class="bi bi-globe-central-south-asia"></i>>Amphiprion Ocellaris es la especie mas conocida de
+                        pez payaso Se hizo muy popular en los ultimos
+                        tiempos debido a la producciones de Disney.
+                        Auque la pelicula critica directamente el mantenimiento incorrecto de peces salvajes en Acuarios
+                        las consecuencias directas del exito ,Fueron el aumento de la demanda en el Mercado.
+                    </p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/orcas.jpg" alt="orcas">
+                    <p <i class="bi bi-globe-americas"></i>>Conocidas por el nombre de ballenas asesinas, las orcas
+                        (Orcinus orca) han sido temidas a lo
+                        largo de la historia y han despertado mucho interés entre los humanos. Su apodo proviene de los
+                        balleneros españoles que las observaban atacar y matar a grandes cetáceos.Las orcas son animales
+                        muy inteligentes. Viven en grupos familiares y son capaces de comunicarse para coordinar
+                        tácticas de cacería sobre sus presas. Además, son grandes nadadoras y pueden alcanzar
+                        velocidades de 50 km/h.</p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/entrella.jpg" alt="estrella">
+                    <p <i class="bi bi-globe"></i>>La estrella de mar es un animal marino que habita tanto en mares como
+                        en océanos.
+                        Desafortunadamente, su población decrece debido a los crecientes niveles de contaminación.Este
+                        animal pertenece a la familia de los equinodermos; es decir, un grupo de animales marinos que
+                        presentan un conjunto de rasgos físicos únicos, como lo son su sistema esquelético, tegumento,
+                        simetría, y también, un curioso sistema vascular.Las estrellas del mar pertenecen a la clase
+                        Asteroidea, de la cual existen pocos registros fósiles que permitan inferir su historia natural.
+                        Por un lado, el proceso de fosilización no se puede llevar a cabo porque su cuerpo se separa en
+                        varias partes cuando se descompone. Asimismo, tienden a vivir en las profundidades marinas en
+                        donde es muy difícil obtener muestras para el análisis. </p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/delfines.jpg" alt="delfines">
+                    <p <i class="bi bi-globe"></i>>Los delfines son muy conocidos por ser animales marinos de gran
+                        inteligencia y muy sociales, pero
+                        sabemos realmente otras curiosidades como por ejemplo ¿qué comen los delfines?
+                        Estos cetáceos son mamíferos que pertenecen a los odontocetos, es decir, animales marinos con
+                        dientes y su alimentación es carnívora.Se trata de animales muy inteligentes que no dejan de
+                        sorprender a los científicos pues han mostrado capacidades de aprendizaje y cognición muy
+                        superiores a las de otras especies.
+                        Se encuentran en los océanos tropicales y otras aguas cálidas de todo el mundo. Antaño fueron
+                        cazados extensamente por su carne y grasas usadas en lámparas de aceite y para cocinar. Hoy en
+                        día, la pesca del delfín se encuentra muy limitada, no obstante los delfines siguen amenazados
+                        por la pesca comercial de otras especies como el atún, y pueden quedar mortalmente enredados en
+                        redes y otros equipos de pesca.</p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/ballena-saliendo.jpg" alt="ballena-saliendo">
+                    <p <i class="bi bi-globe"></i>>La ballena azul es una de las especies más famosas del mundo marino.
+                        Este cetáceo misticeto de la
+                        familia Balaenopteridae es el animal más grande que jamás haya existido en la tierra y uno de
+                        los más longevos del planeta. Solo su lengua pesa casi tres toneladas, y algunos ejemplares han
+                        llegado a vivir más de 100 años.Además, es el animal más ruidoso de la Tierra, incluso más
+                        ruidoso que un motor a reacción: sus cantos alcanzan los 188 decibeles mientras que el ruido de
+                        un jet llega a los 140 decibeles. El silbido de baja frecuencia que emiten las ballenas puede
+                        escucharse a cientos de millas y probablemente es utilizado para atraer a otras ballenas azules.
+                    </p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/manta-raya.jpg" alt="manta-raya">
+                    <p <i class="bi bi-globe-americas"></i>>Las mantarrayas son los peces con los cerebros más grandes,
+                        y al mismo tiempo, son animales
+                        carismáticos y apacibles. Lo primero que tienes que saber sobre las mantarrayas es que son
+                        peces como los salmones y las truchas, pese a ser diferentes de ellos en cuestión de aspecto
+                        físico. De hecho, están emparentadas con los tiburones pues ambos pertenecen a la subclase
+                        Elasmobranchii y se caracterizan por poseer un esqueleto compuesto por cartílago en vez de
+                        huesos. </p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/caballito.jpg" alt="caballito">
+                    <p <i class="bi bi-globe-americas"></i>>Los caballitos de mar son peces diminutos que reciben su
+                        nombre por la forma de su cabeza, que
+                        parece la cabeza de un caballo diminuto. Hay al menos 50 especies de caballitos de mar.El
+                        caballito de mar es un animal único, y no solo por su rara forma equina. A diferencia de otros
+                        animales acuáticos, estos son monógamos y sus parejas duran de por vida, pero lo que lo hace un
+                        pez realmente extraño es que es una de las pocas especies en las cuales el macho incuba los
+                        huevos que pronto serán sus crías. Los científicos han aprendido su biología básica, pero aún
+                        queda mucho por saber sobre estos carismáticos animales.</p>
                 </div>
             </section>
 
             <section class="tortuga">
                 <div>
                     <img src="../img/meduza.jpg" alt="meduza">
+                    <p <i class="bi bi-globe-europe-africa"></i>>Las medusas poseen un cuerpo gelantinoso que para
+                        desplazarse por el agua se impulsan mediante
+                        contracciones rítmicas de todo su cuerpo.
+                        Se les considera como marionetas de mar al contar con tentáculos filiformes muy largos. La
+                        Pelagia Noctulica tiene el honor de ser la especie más frecuente en el Mediterráneo. Las
+                        molestias ocasionadas por su picadura (sensación de quemazón) provocan que los bañistas
+                        alcanzados por sus rejos requieran atención médica.
+                    </p>
                 </div>
             </section>
         </div>
@@ -109,6 +199,9 @@
         <a href="https://twitter.com/?lang=es" target="_blank">
             <img src="../img/gorjeo.png" alt="twitter"></a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
