--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
     </header>
     <h2> ! CUAL ES TU IDEA DEL MUNDO MARINO ! ! EL 70% DEL MUNDO ES AGUA !</h2>
     <main>
+
+
         <div>
             <section class="langosta">
                 <ul><a href="./pages/enciclopedia.html">LANGOSTA</a></ul>
                 <img src="img/langosta-1.jpg" alt="Langosta">
                 <p>A pesar de su apariencia pesada es capaz de nadar gracias a las potentes contracciones de su cola
                     fuertemente musculada. Esta es la parte que la hace muy apreciada gastronómicamente.De hábitos
-                    nocturnos, la langosta es muy voraz y se alimenta de todo lo que encuentra, aunque sus preferencias
-                    se centran en poliquetos, crustáceos, moluscos, algas, restos orgánicos y gusanos. Destaca el hecho
+                    nocturnos, la langosta es muy voraz y se alimenta de todo lo que encuentra, aunque sus
+                    preferencias
+                    se centran en poliquetos, crustáceos, moluscos, algas, restos orgánicos y gusanos. Destaca el
+                    hecho
                     de que es capaz de romper las duras conchas de los bivalvos, pese a carecer de pinzas. </p>
             </section>
         </div>
@@ -47,7 +51,8 @@
                 <img src="img/salmon1.jpg" alt="Salmon">
                 <p>El Salmón ha sido alimento básico en el nordeste de Europa durante siglos. Los ejemplares adultos
                     siguen alcanzando un elevado precio en el mercado. Ahora mismo en España su comercialización la
-                    acaparan casi por completo los salmones cultivados en granjas acuícolas, principalmente de Noruega,
+                    acaparan casi por completo los salmones cultivados en granjas acuícolas, principalmente de
+                    Noruega,
                     Escocia y Chile</p>
             </section>
         </div>
@@ -58,10 +63,14 @@
                 <img src="img/Pulpo-1.jpg" alt="Pulpo">
                 <p>Los octópodos son animales marinos de la familia de los moluscos cefalópodos que carecen de
                     esqueleto: ni interno ni externo. Considerado el más inteligente de todos los invertebrados, el
-                    pulpo común se encuentra en las aguas tropicales y templadas de los océanos del mundo. Con su cabeza
-                    de forma bulbosa, ocho potentes brazos provistos de tentáculos y dos ojos saltones, el pulpo es uno
-                    de los animales más peculiares que podemos encontrar en el fondo marino. Siem embargo detrás de tan
-                    extraña apariencia el pulpo también oculta otros secretos. De el sabemos que tiene tres corazones,
+                    pulpo común se encuentra en las aguas tropicales y templadas de los océanos del mundo. Con su
+                    cabeza
+                    de forma bulbosa, ocho potentes brazos provistos de tentáculos y dos ojos saltones, el pulpo es
+                    uno
+                    de los animales más peculiares que podemos encontrar en el fondo marino. Siem embargo detrás de
+                    tan
+                    extraña apariencia el pulpo también oculta otros secretos. De el sabemos que tiene tres
+                    corazones,
                     un cerebro y que en la parte interior de sus ocho brazos cuenta con unas potentes ventosas. </p>
             </section>
         </div>
@@ -70,15 +79,22 @@
             <section class="cangrejo">
                 <ul><a href="./pages/enciclopedia.html">CANGREJO</a></ul>
                 <img src="img/Cangrejo-1.jpg" alt="Cangrejo">
-                <p>Un artrópodo es un ser invertebrado cuyo cuerpo presenta simetría bilateral, está formado por varios
-                    segmentos, tiene apéndices con piezas articuladas y cuenta con una cutícula como cobertura. En este
+                <p>Un artrópodo es un ser invertebrado cuyo cuerpo presenta simetría bilateral, está formado por
+                    varios
+                    segmentos, tiene apéndices con piezas articuladas y cuenta con una cutícula como cobertura. En
+                    este
                     grupo podemos encontrar a los crustáceos: animales que respiran mediante branquias y disponen de
-                    apéndices, antenas y un caparazón calcificado. Los decápodos, por otra parte, son los crustáceos que
+                    apéndices, antenas y un caparazón calcificado. Los decápodos, por otra parte, son los crustáceos
+                    que
                     tienen diez patas.Los cangrejos, por lo tanto, son animales de diez patas con un caparazón
                     calcificado, antenas y apéndices que desarrollan la respiración branquial. Gracias a sus pinzas
                     pueden luchar contra otros animales y manipular los alimentos</p>
             </section>
         </div>
+
+
+
+
 
     </main>
     <footer>
