--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>EXPLORADOR</title>
 </head>
 
@@ -23,7 +23,7 @@
                 <li><a href="./pages/nosotros.html">NOSOTROS</a></li>
                 <li><a href="./pages/enciclopedia.html">ENCICLOPEDIA</a></li>
                 <li><a href="./pages/contacto.html">CONTACTO</a></li>
-                <li><a href="./pages/biografia.html">BIOGRAFIA</a></li>
+                <li><a href="./pages/galeria.html">GALERIA</a></li>
             </ul>
         </nav>
     </header>
@@ -33,65 +33,52 @@
 
         <div>
             <section class="langosta">
-                <ul><a href="./pages/enciclopedia.html">LANGOSTA</a></ul>
-                <img src="img/langosta-1.jpg" alt="Langosta">
-                <p>A pesar de su apariencia pesada es capaz de nadar gracias a las potentes contracciones de su cola
-                    fuertemente musculada. Esta es la parte que la hace muy apreciada gastronómicamente.De hábitos
-                    nocturnos, la langosta es muy voraz y se alimenta de todo lo que encuentra, aunque sus
-                    preferencias
-                    se centran en poliquetos, crustáceos, moluscos, algas, restos orgánicos y gusanos. Destaca el
-                    hecho
-                    de que es capaz de romper las duras conchas de los bivalvos, pese a carecer de pinzas. </p>
+                <ul><a href="./pages/enciclopedia.html">MAR CARIBE</a></ul>
+                <img src="./img/mar-caribe.jpg" alt="mar caribe">
+                <p>La Maravillas Que Tenemos En Nuestros Mares</p>
             </section>
         </div>
 
         <div>
             <section class="salmon">
-                <ul><a href="./pages/enciclopedia.html">SALMON</a></ul>
-                <img src="img/salmon1.jpg" alt="Salmon">
-                <p>El Salmón ha sido alimento básico en el nordeste de Europa durante siglos. Los ejemplares adultos
-                    siguen alcanzando un elevado precio en el mercado. Ahora mismo en España su comercialización la
-                    acaparan casi por completo los salmones cultivados en granjas acuícolas, principalmente de
-                    Noruega,
-                    Escocia y Chile</p>
+                <ul><a href="./pages/enciclopedia.html">OCEANO PACIFICO</a></ul>
+                <img src="./img/oceano-pacifico.jpg" alt="oceano pacifico">
+                <p></p>
             </section>
         </div>
 
         <div>
             <section class="pulpo">
-                <ul><a href="./pages/enciclopedia.html">PULPO</a></ul>
-                <img src="img/Pulpo-1.jpg" alt="Pulpo">
-                <p>Los octópodos son animales marinos de la familia de los moluscos cefalópodos que carecen de
-                    esqueleto: ni interno ni externo. Considerado el más inteligente de todos los invertebrados, el
-                    pulpo común se encuentra en las aguas tropicales y templadas de los océanos del mundo. Con su
-                    cabeza
-                    de forma bulbosa, ocho potentes brazos provistos de tentáculos y dos ojos saltones, el pulpo es
-                    uno
-                    de los animales más peculiares que podemos encontrar en el fondo marino. Siem embargo detrás de
-                    tan
-                    extraña apariencia el pulpo también oculta otros secretos. De el sabemos que tiene tres
-                    corazones,
-                    un cerebro y que en la parte interior de sus ocho brazos cuenta con unas potentes ventosas. </p>
+                <ul><a href="./pages/enciclopedia.html">OCEANO ATLANTICO</a></ul>
+                <img src="./img/oceano-atlantico.jpg" alt="OCEANO ATLANTICO">
+                <p></p>
             </section>
         </div>
 
         <div>
             <section class="cangrejo">
-                <ul><a href="./pages/enciclopedia.html">CANGREJO</a></ul>
-                <img src="img/Cangrejo-1.jpg" alt="Cangrejo">
-                <p>Un artrópodo es un ser invertebrado cuyo cuerpo presenta simetría bilateral, está formado por
-                    varios
-                    segmentos, tiene apéndices con piezas articuladas y cuenta con una cutícula como cobertura. En
-                    este
-                    grupo podemos encontrar a los crustáceos: animales que respiran mediante branquias y disponen de
-                    apéndices, antenas y un caparazón calcificado. Los decápodos, por otra parte, son los crustáceos
-                    que
-                    tienen diez patas.Los cangrejos, por lo tanto, son animales de diez patas con un caparazón
-                    calcificado, antenas y apéndices que desarrollan la respiración branquial. Gracias a sus pinzas
-                    pueden luchar contra otros animales y manipular los alimentos</p>
+                <ul><a href="./pages/enciclopedia.html">OCEANO ARTICO</a></ul>
+                <img src="./img/oceano-artico.jpg" alt="OCEANO ARTICO">
+                <p></p>
             </section>
         </div>
 
+        <div>
+            <section class="cangrejo">
+                <ul><a href="./pages/enciclopedia.html">OCEANO ANTARTICO</a></ul>
+                <img src="./img/oceano-antartico.jpg" alt="OCEANO ANTARTICO">
+                <p></p>
+            </section>
+        </div>
+
+
+        <div>
+            <section class="cangrejo">
+                <ul><a href="./pages/enciclopedia.html">OCEANO INDICO</a></ul>
+                <img src="./img/oceano-indico.jpg" alt="OCEANO INDICO">
+                <p></p>
+            </section>
+        </div>
 
 
 
