--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>EXPLORADOR</title>
 </head>
 
@@ -23,11 +23,30 @@
                 <li><a href="./nosotros.html">NOSOTROS</a></li>
                 <li><a href="./enciclopedia.html">ENCICLOPEDIA</a></li>
                 <li><a href="./contacto.html"> CONTACTO</a></li>
-                <li><a href="./biografia.html">BIOGRAFIA</a></li>
+                <li><a href="./galeria.html">GALERIA</a></li>
             </ul>
         </nav>
     </header>
-    <H2>SI TIENES ALGO PARA COMPARTIR NOS PUEDES CONTACTAR POR TODOS ESTOS MEDIOS</H2>
+    <H2 class="hh">SI TIENES ALGO PARA COMPARTIR NOS PUEDES CONTACTAR POR TODOS ESTOS MEDIOS</H2>
+    
+    <main>
+        <div class="mb-3">
+            <p></p>
+            <label for="exampleFormControlInput1" class="form-label">@Email</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"> !Comparte Tus Ideas !</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <div class="d-grid gap-2">
+                <h3>  Tambien nos puedes compartir por las redes sociales para seguir motivando tu conocimiento</h3>
+            <p></p>
+                <button class="btn btn-primary" type="button">Enviar</button>
+                <button class="btn btn-primary" type="button">Cancelar</button>
+            </div>
+        </div>
+    </main>
+
     <footer>
 
         <a href="https://www.facebook.com" target="_blank">
