--- a/pages/enciclopedia.html
+++ b/pages/enciclopedia.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>EXPLORADOR</title>
 </head>
 
@@ -23,7 +23,7 @@
                 <li><a href="./nosotros.html">NOSOTROS</a></li>
                 <li><a href="./enciclopedia.html">ENCICLOPEDIA</a></li>
                 <li><a href="./contacto.html"> CONTACTO</a></li>
-                <li><a href="./biografia.html">BIOGRAFIA</a></li>
+                <li><a href="./galeria.html">GALERIA</a></li>
             </ul>
         </nav>
     </header>
