--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>EXPLORADOR</title>
 </head>
 
@@ -29,14 +29,27 @@
     </header>
     <h2>QUE ES LO QUE HACEMOS</h2>
     <main>
-        <div>
-            <section>
-                <ul><a href=""></a></ul>
-            </section>
+        <div class="clearfix">
+            <img src="../img/pexels-14jpg.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="N14">
+
+            <p class="nosotros1">
+            Somos una pagina sin fines de lucro que busca la comunicacion de varios factores sobre el mundo y la vida marina 
+            la idea general es el auto aprendizaje.
+
+            ! Sabes cuando oceanos tenemos ! Lo que influye el mar tanto en la economica mudial como en la alimentacion .
+
+            Que tan importate es la conservacion de la parte del mundo como mas diversidad de especies .
+
+            !Como se ah visto afectado a lo largo del tiempo por la contaminacion y la caza de especies que tiene un tipo de 
+            ecosistema muy delicado y lo que afecta a la cadena alimenticia  tanto como para la humanidad como para las mismas especies 
+            tanto depredadores como no .
+
+            Si tienes informacion o quieres hacer conmentarios que ayude a hacernos creecer y ayudar a otras personas te dejamos
+            un espacio en que puedes compartir lo que quieras ....
+            
+        </p>
+
         </div>
-        <section>
-            <iframe src="" frameborder="0"></iframe>
-        </section>
     </main>
     <footer>
         <a href="https://www.facebook.com" target="_blank">
