--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 <body>
     <header>
-        <a href="./index.html"><img 
-            class="logo"src="./img/globo-terraqueo-con-mapas-de-continentes.png" alt="logo">
+        <a href="./index.html"><img src="./img/globo-terraqueo-con-mapas-de-continentes.png" alt="logo">
             <h1>EXPLORADOR</h1>
         </a>
         <nav>
